Fixed some mistakes

--- a/templates/tag.html
+++ b/templates/tag.html
@@ -16,7 +16,7 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use>
         </svg>
       </a>
-      <a href="/#food" class="header__logo-link">
+      <a href="/" class="header__logo-link">
         <svg class="header__logo" width="144" height="26">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#tag"></use>
         </svg>
@@ -27,14 +27,14 @@
     <section class="items">
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava1.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">Username</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post4.jpg" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr"><a href="/templates/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
@@ -54,14 +54,14 @@
       </div>
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">Username</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post2.jpg" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr"><a href="/templates/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn active">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
@@ -81,14 +81,14 @@
       </div>
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">Username</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post3.jpg" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr"><a href="/templates/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
