--- a/templates/bookmarks.html
+++ b/templates/bookmarks.html
@@ -27,7 +27,7 @@
     <section class="items">
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava1.png" alt="" class="item__ava" width="47">
             </div>
@@ -35,19 +35,19 @@
           </a>
           <a href="#" class="item__delete">Удалить</a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post5.jpg" alt="" width="348" class="item__post-img">
         </a>
-        <p class="item__descr">Текст описания длинный... <a href="/templates/post.html/post.html" class="item__btn-more">Еще</a></p>
+        <p class="item__descr">Текст описания длинный... <a href="/templates/post.html" class="item__btn-more">Еще</a></p>
         <div class="item__post-info">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Показать комментарии (13)</a>
+          <a href="/templates/post.html" class="item__btn-more">Показать комментарии (13)</a>
           <div class="item__counter">
             <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
             <span class="item__counter-text">212</span>
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
@@ -55,7 +55,7 @@
       </div>
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
             </div>
@@ -63,19 +63,19 @@
           </a>
           <a href="#" class="item__delete">Удалить</a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post6.jpg" alt="" width="348" class="item__post-img">
         </a>
-        <p class="item__descr">Текст описания длинный... <a href="/templates/post.html/post.html" class="item__btn-more">Еще</a></p>
+        <p class="item__descr">Текст описания длинный... <a href="/templates/post.html" class="item__btn-more">Еще</a></p>
         <div class="item__post-info">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Показать комментарии (13)</a>
+          <a href="/templates/post.html" class="item__btn-more">Показать комментарии (13)</a>
           <div class="item__counter">
             <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
             <span class="item__counter-text">212</span>
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
@@ -83,7 +83,7 @@
       </div>
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
             </div>
@@ -91,19 +91,19 @@
           </a>
           <a href="#" class="item__delete">Удалить</a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post7.jpg" alt="" width="348" class="item__post-img">
         </a>
-        <p class="item__descr">Текст описания длинный... <a href="/templates/post.html/post.html" class="item__btn-more">Еще</a></p>
+        <p class="item__descr">Текст описания длинный... <a href="/templates/post.html" class="item__btn-more">Еще</a></p>
         <div class="item__post-info">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Показать комментарии (13)</a>
+          <a href="/templates/post.html" class="item__btn-more">Показать комментарии (13)</a>
           <div class="item__counter">
             <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
             <span class="item__counter-text">1023</span>
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn active">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
