--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#skyprogram"></use>
         </svg>
       </a>
-      <a href="/templates/bookmarks.htmlmarks.html" class="header__bookmark-btn">
+      <a href="/templates/bookmarks.html" class="header__bookmark-btn">
         <img src="../static/img/bookmark.png" alt="" class="header__bookmark-icon" width="28">
         <span class="header__bookmark-counter">3</span>
       </a>
@@ -26,14 +26,14 @@
     <section class="items">
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava1.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">Johnny</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post1.jpg" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr">Текст описания коротки...</p>
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
@@ -53,14 +53,14 @@
       </div>
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">Username</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post2.jpg" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr">Текст описания коротки...</p>
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn active">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
@@ -80,14 +80,14 @@
       </div>
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">Username</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post3.jpg" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr">Текст описания коротки...</p>
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
