--- a/templates/search.html
+++ b/templates/search.html
@@ -33,17 +33,17 @@
     <section class="items">
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava1.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">skypro.08</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post5.jpg" alt="" width="348" class="item__post-img">
         </a>
-        <p class="item__descr"><a href="/templates/tag.htmls/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
+        <p class="item__descr"><a href="/templates/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
         <div class="item__post-info">
           <p class="item__comments-counter">13 комментариев</p>
           <div class="item__counter">
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
@@ -60,17 +60,17 @@
       </div>
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">Username</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post6.jpg" alt="" width="348" class="item__post-img">
         </a>
-        <p class="item__descr"><a href="/templates/tag.htmls/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
+        <p class="item__descr"><a href="/templates/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
         <div class="item__post-info">
           <p class="item__comments-counter">Нет комментариев</p>
           <div class="item__counter">
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn active">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
@@ -87,17 +87,17 @@
       </div>
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
               <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">Username</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post7.jpg" alt="" width="348" class="item__post-img">
         </a>
-        <p class="item__descr"><a href="/templates/tag.htmls/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
+        <p class="item__descr"><a href="/templates/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
         <div class="item__post-info">
           <p class="item__comments-counter">5 комментариев</p>
           <div class="item__counter">
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
