--- a/templates/user-feed.html
+++ b/templates/user-feed.html
@@ -34,7 +34,7 @@
             <span class="item__username">skypro.08</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post5.jpg" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr"><a href="#" class="item__tag">#food</a> Текст описания коротки...</p>
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
@@ -61,7 +61,7 @@
             <span class="item__username">Username</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post6.jpg" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr"><a href="#" class="item__tag">#food</a> Текст описания коротки...</p>
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn active">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
@@ -88,7 +88,7 @@
             <span class="item__username">Username</span>
           </a>
         </div>
-        <a href="/templates/post.html/post.html" class="item__post-link">
+        <a href="/templates/post.html" class="item__post-link">
           <img src="../static/img/post7.jpg" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr"><a href="#" class="item__tag">#food</a> Текст описания коротки...</p>
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
