--- a/templates/post.html
+++ b/templates/post.html
@@ -7,7 +7,7 @@
   <title>SKYPROGRAM post</title>
   <link href="../static/css/styles.min.css" rel="stylesheet">
 </head>
-
+<STYLE>A {text-decoration: none;} </STYLE>
 <body>
   <header class="container header">
     <div class="header__wrapper">
@@ -23,62 +23,60 @@
       </a>
     </div>
   </header>
-  <main class="container">
-    <section class="items">
-      <div class="items__item item item--post">
-        <div class="item__top">
-          <a href="/templates/user-feed.html" class="item__head">
-            <div class="item__ava-wrap">
-              <img src="../static/img/ava1.png" alt="" class="item__ava" width="47">
-            </div>
-            <span class="item__username">Username</span>
+  {% for result in results %}
+    <main class="container">
+      <section class="items">
+        <div class="items__item item item--post">
+          <div class="item__top">
+            <a href="/users/{{result.poster_name}}" class="item__head">
+              <div class="item__ava-wrap">
+                <img src="{{result.poster_avatar}}" alt="" class="item__ava" width="47">
+              </div>
+              <span class="item__username">{{result.poster_name}}</span>
+            </a>
+            <form action="/bookmarks/add/{{result.pk}}">
+              <button type="button" class="item__bookmark-btn">
+                <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
+              </button>
+            </form>
+          </div>
+          <a href="/post/{{result.pk}}" class="item__post-link">
+            <img src="{{result.pic}}" alt="" width="348" class="item__post-img">
           </a>
-          <button type="button" class="item__bookmark-btn">
-            <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
-          </button>
-        </div>
-        <a href="" class="item__post-link">
-          <img src="../static/img/post1.jpg" alt="" width="348" class="item__post-img">
-        </a>
-        <div class="item__descr">
-          <p class="item__text">
-            Закрытые бутерброды пришли к&nbsp;нам из&nbsp;Англии. Вкусные и&nbsp;простые рецепты сэндвичей с&nbsp;фото позволят вам разнообразить завтраки и&nbsp;сделать перекусы более сытными! Они могут быть, как горячими, так и&nbsp;холодными.
-          </p>
-          <p class="item__text">
-            Итальянские закрытые сэндвичи называются панини. Для их&nbsp;приготовления берут чиабатту. В&nbsp;классическом рецепте используют традиционные итальянские продукты: помидоры, базилик, мацареллу.</p>
-        </div>
-        <div class="item__bottom">
-          <div class="item__post-info">
-            <p class="item__comments-counter">3 комментария</p>
-            <div class="item__counter">
-              <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
-              <span class="item__counter-text">1023</span>
-            </div>
+          <div class="item__descr">
+            <p class="item__text">{{result.content|safe}}</p>
           </div>
-          <div class="item__comments">
-            <p class="item__comment">
-              <b>user 1:</b> комментарий пользователя который его оставил
-            </p>
-            <p class="item__comment">
-              <b>user 2:</b> еще один комментарий
-            </p>
-            <p class="item__comment">
-              <b>user 3:</b> и&nbsp;какой-то коммент еще
-            </p>
+          <div class="item__bottom">
+            <div class="item__post-info">
+              <p class="item__comments-counter">{{result.comment}} комментария</p>
+              <div class="item__counter">
+                <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
+                <span class="item__counter-text">{{result.views_count}}</span>
+              </div>
+            </div>
+            <div class="item__comments">
+              {% for com in post_comments %}
+                {% if result.pk == com.post_id %}
+                  <p class="item__comment">
+                    <b>{{com.commenter_name}}:</b> {{com.comment}}
+                  </p>
+                {% endif %}
+              {% endfor %}
+            </div>
+            <form action="/" class="item__comment-form comment-form">
+              <div class="comment-form__input-wrap">
+                <input type="search" class="comment-form__input" placeholder="Ваше имя">
+              </div>
+              <div class="comment-form__input-wrap">
+                <textarea class="comment-form__textarea" placeholder="Ваш комментарий" rows="6"></textarea>
+              </div>
+              <button type="submit" class="comment-form__btn">Отправить</button>
+            </form>
           </div>
-          <form action="/" class="item__comment-form comment-form">
-            <div class="comment-form__input-wrap">
-              <input type="search" class="comment-form__input" placeholder="Ваше имя">
-            </div>
-            <div class="comment-form__input-wrap">
-              <textarea class="comment-form__textarea" placeholder="Ваш комментарий" rows="6"></textarea>
-            </div>
-            <button type="submit" class="comment-form__btn">Отправить</button>
-          </form>
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
+  {% endfor %}
   <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
     <symbol id="back" viewbox="0 0 19 16" fill="none" width="19" height="16">
       <path d="m17.34 6.19.028.006H5.074L8.94 2.322c.19-.189.293-.445.293-.714 0-.269-.104-.523-.293-.713L8.338.294A.997.997 0 0 0 7.628 0a.997.997 0 0 0-.71.293L.293 6.917A.995.995 0 0 0 0 7.63c0 .27.103.524.293.713l6.625 6.625c.189.189.441.293.71.293.269 0 .52-.104.71-.293l.601-.602a.995.995 0 0 0 .293-.71.965.965 0 0 0-.293-.696L5.031 9.064h12.322c.554 0 1.02-.477 1.02-1.03v-.851c0-.554-.48-.994-1.033-.994Z" fill="#000" />
