--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,7 @@
   <title>SKYPROGRAM search</title>
   <link href="../static/css/styles.min.css" rel="stylesheet">
 </head>
-
+<STYLE>A {text-decoration: none;} </STYLE>
 <body>
   <header class="container header">
     <div class="header__wrapper">
@@ -25,94 +25,45 @@
   </header>
   <main class="container">
     <div class="search">
-      <form action="/" class="search__form">
-        <input type="search" class="search__input">
+      <form action="/search" method="get" class="search__form">
+        <input type="search" class="search__input" placeholder="Введите слово" name="s" value="{{ s }}">
       </form>
-      <p class="search__results">Найдено постов: 11</p>
+
+      <p class="search__results">Найдено постов: {{ count or "0" }}</p>
     </div>
-    <section class="items">
-      <div class="items__item item">
-        <div class="item__top">
-          <a href="/templates/user-feed.html" class="item__head">
-            <div class="item__ava-wrap">
-              <img src="../static/img/ava1.png" alt="" class="item__ava" width="47">
-            </div>
-            <span class="item__username">skypro.08</span>
+    {% for result in results %}
+      <section class="items">
+        <div class="items__item item">
+          <div class="item__top">
+            <a href="/users/{{result.poster_name}}" class="item__head">
+              <div class="item__ava-wrap">
+                <img src="{{result.poster_avatar}}" alt="" class="item__ava" width="47">
+              </div>
+              <span class="item__username">{{result.poster_name}}</span>
+            </a>
+          </div>
+          <a href="/post/{{result.pk}}" class="item__post-link">
+            <img src="{{result.pic}}" alt="" width="348" class="item__post-img">
           </a>
-        </div>
-        <a href="/templates/post.html" class="item__post-link">
-          <img src="../static/img/post5.jpg" alt="" width="348" class="item__post-img">
-        </a>
-        <p class="item__descr"><a href="/templates/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
-        <div class="item__post-info">
-          <p class="item__comments-counter">13 комментариев</p>
-          <div class="item__counter">
-            <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
-            <span class="item__counter-text">212</span>
+          <p class="item__descr">{{result.content|truncate(50)|safe}}</p>
+          <div class="item__post-info">
+            <p class="item__comments-counter">{{result.comment}} комментариев</p>
+            <div class="item__counter">
+              <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
+              <span class="item__counter-text">{{result.views_count}}</span>
+            </div>
+          </div>
+          <div class="item__post-bottom">
+            <a href="/post/{{result.pk}}" class="item__btn-more">Подробнее</a>
+            <form action="/bookmarks/add/{{result.pk}}">
+              <button type="button" class="item__bookmark-btn">
+                <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
+              </button>
+            </form>
           </div>
         </div>
-        <div class="item__post-bottom">
-          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
-          <button type="button" class="item__bookmark-btn">
-            <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
-          </button>
-        </div>
-      </div>
-      <div class="items__item item">
-        <div class="item__top">
-          <a href="/templates/user-feed.html" class="item__head">
-            <div class="item__ava-wrap">
-              <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
-            </div>
-            <span class="item__username">Username</span>
-          </a>
-        </div>
-        <a href="/templates/post.html" class="item__post-link">
-          <img src="../static/img/post6.jpg" alt="" width="348" class="item__post-img">
-        </a>
-        <p class="item__descr"><a href="/templates/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
-        <div class="item__post-info">
-          <p class="item__comments-counter">Нет комментариев</p>
-          <div class="item__counter">
-            <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
-            <span class="item__counter-text">1023</span>
-          </div>
-        </div>
-        <div class="item__post-bottom">
-          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
-          <button type="button" class="item__bookmark-btn active">
-            <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
-          </button>
-        </div>
-      </div>
-      <div class="items__item item">
-        <div class="item__top">
-          <a href="/templates/user-feed.html" class="item__head">
-            <div class="item__ava-wrap">
-              <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
-            </div>
-            <span class="item__username">Username</span>
-          </a>
-        </div>
-        <a href="/templates/post.html" class="item__post-link">
-          <img src="../static/img/post7.jpg" alt="" width="348" class="item__post-img">
-        </a>
-        <p class="item__descr"><a href="/templates/tag.html" class="item__tag">#food</a> Текст описания коротки...</p>
-        <div class="item__post-info">
-          <p class="item__comments-counter">5 комментариев</p>
-          <div class="item__counter">
-            <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
-            <span class="item__counter-text">1023</span>
-          </div>
-        </div>
-        <div class="item__post-bottom">
-          <a href="/templates/post.html" class="item__btn-more">Подробнее</a>
-          <button type="button" class="item__bookmark-btn">
-            <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
-          </button>
-        </div>
-      </div>
-    </section>
+      </section>
+    {% endfor %}
   </main>
   <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
     <symbol id="back" viewbox="0 0 19 16" fill="none" width="19" height="16">
